2008-04-26  Zoran Vasiljevic <vasiljevic@users.sourceforge.net>

        * generic/tclAsync.c: Tcl_AsyncDelete(): panic if attempt
        to locate handler token fails. Happens when some other
        thread attempts to delete somebody else's token.

2008-04-24  Andreas Kupries  <andreask@activestate.com>

	* tests/ioCmd.test: Extended testsuite for reflected channel
	implementation. Added test cases about how it handles if the rug
	is pulled out from under a channel (= killing threads,
	interpreters containing the tcl command for a channel, and channel
	sitting in a different interpreter/thread.)

	* generic/tclIORChan.c: Fixed the bugs exposed by the new
	testcases, redone most of the cleanup and exit handling.

2008-04-21  Don Porter	<dgp@users.sourceforge.net>

	* generic/tclIOUtil.c:		Removed all code delimited by
	* generic/tclTest.c:		USE_OBSOLETE_FS_HOOKS, completing
	* tests/ioCmd.test:		the deprecation path for these
	* tests/ioUtil.test (removed):	obsolete interfaces.  (Code was active
	in Tcl 8.4, present but enabled only by customized compile switch in
	Tcl 8.5, and now completely gone for Tcl 8.6).  Also removed all tests
	relevant only to the removed interfaces.

2008-04-19  George Peter Staplin <georgeps@xmission.com>

	* doc/Ensemble.3: Fix a typo: s/defiend/defined/
	Thanks to hat0 for spotting this.

2008-04-16  Daniel Steffen  <das@users.sourceforge.net>

	* generic/tclInt.h:		make stubs tables 'static const' and
	* generic/tclStubInit.c:	export only module-scope pointers to
	* generic/tclStubLib.c:		the main stubs tables (for package
	* tools/genStubs.tcl:		initialization). [Patch 1938497]
	* generic/tclBasic.c (Tcl_CreateInterp):
	* generic/tclTomMathInterface.c (TclTommath_Init):

	* generic/tclInt.h:		revise Tcl_SetNotifier() to use a
	* generic/tclNotify.c:		module-scope hooks table instead of
	* generic/tclStubInit.c:	runtime stubs-table modification;
	* macosx/tclMacOSXNotify.c:	ensure all hookable notifier functions